--- a/frontend/templates/temp.html
+++ b/frontend/templates/temp.html
@@ -391,7 +391,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="{% static 'logo.png' %}" alt="Clinika">
+                    <img src="{% static 'ReeDuVie.jpg' %}" alt="Clinika">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
@@ -470,6 +470,10 @@
         {% endblock temp_content %}
        
     </div>
+
+
+
+
     {% block temp_index %}
     <!-- Main content goes here -->
     {% endblock temp_index %}
@@ -480,7 +484,7 @@
                 <!-- Logo Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <a href="/">
-                    <img src="{% static 'logo.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
+                    <img src="{% static 'ReeDuVie.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
 
 
                     </a>
@@ -550,3 +554,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
