--- a/practitionerdashboard/templates/practitionerdashboard/base.html
+++ b/practitionerdashboard/templates/practitionerdashboard/base.html
@@ -458,16 +458,16 @@
 
 
 
-
 <body>
-    <!-- Header -->
+
     <!-- Header -->
 <div class="header">
     <div class="header-left">
         <a href="/" class="logo">
-            <img src="{% static 'logo.png' %}" width="35" height="35" alt="Preclinic">
+            <img src="{% static 'ReeDuVie.jpg' %}" width="35" height="35" alt="Preclinic">
         </a>
     </div>
+
     <a id="mobile_btn" class="mobile_btn float-left" href="javascript:void(0);"><i class="fa fa-bars" style="color: white;"></i></a>
     <a id="toggle_btn" href="javascript:void(0);"><i class="fa fa-bars" style="color: white;"></i></a>
     <ul class="nav user-menu float-right">
@@ -521,19 +521,19 @@
 
         <!-- Profile Picture -->
         <li class="nav-item dropdown has-arrow">
-            <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
-                <span class="user-img">
-                    <img class="rounded-circle" src="{% get_practitioner_image request %}" width="30" height="30" alt="Profile Picture">
+            <a href="#" class="dropdown-toggle nav-link user-link d-flex align-items-center" data-toggle="dropdown">
+                <span class="user-img d-inline-block">
+                    <img src="{% get_practitioner_image request %}" class="rounded-circle" width="30" height="30" style="object-fit: cover;" alt="Profile Picture">
                 </span>
+                <span class="ml-2">Profile</span> <!-- Optional: Add text for better alignment -->
             </a>
+        
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="{% url 'practitioner_dashboard:practitioner_profile' %}">My Profile</a>
                 <a class="dropdown-item" href="#">Settings</a>
                 <a class="dropdown-item" href="{% url 'frontend:logout' %}">Logout</a>
             </div>
         </li>
-
-
 
     </ul>
 </div>
@@ -616,7 +616,7 @@
                 <!-- Logo Section -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <a href="/">
-                    <img src="{% static 'logo.png' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
+                    <img src="{% static 'ReeDuvie.jpg' %}" alt="Logo" class="img-fluid mb-3" style="max-width: 150px;">
 
                     </a>
                     <div class="social-icons">
@@ -678,6 +678,8 @@
     </div>
 </div>
 </div>
+
+
 </footer>
     <!-- Scripts -->
     <script src="{% static 'assets/js/jquery-3.2.1.min.js' %}"></script>
@@ -745,8 +747,6 @@
             updateSidebarHeight();
         });
     </script>
-<<<<<<< HEAD
-=======
     <script>
         function startVideoCall(patientId) {
             fetch(`/practitioner-dashboard/start-video-call/${patientId}/`, {
